# cpp-code-refactor-utility

./: CMakeLists.txt
include/: RefactorTool.h
src/: CMakeLists.txt  RefactorTool.cpp  main.cpp
tests/: CMakeLists.txt  main.cpp  test.cpp
